# aios-team-brain

./: .coderabbit.yaml  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  RESOLVER.md  SECURITY.md  compose.test.neo4j.yml  compose.test.vector.yml  compose.test.yml  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  railway.json  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts  vitest.datamechanics.config.ts  vitest.http.config.ts
.claude/: resolver-fixtures.yaml  settings.json
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
app/: global-error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
components/: copy-snippet.tsx  decisions-table.tsx  empty-state.tsx  format.test.ts  format.ts  help-hint.tsx  kind-badge.tsx  login-form.tsx  markdown.tsx  query-chat.tsx  sparkline.tsx  team-nav.tsx  theme-toggle.tsx  tier-badge.tsx
docs/: ARCHITECTURE.md  CHAT-CLIENTS.md  CI-ARCHITECTURE.md  ENGINEERING-CONSTITUTION.md  GRANOLA.md  LOCAL_AI_WORKSTATION.md  OPS.md  PROVIDERS.md  RADAR.md  TODO.md  agent-handoffs.md  context-management-system.md
graphiti/: .env.example  Dockerfile  README.md  docker-compose.yml  railway.json
ingestion/: .env.example  .gitignore  README.md  THIRD_PARTY_LICENSES.md  connections.example.yaml  connections.yaml.example  pyproject.toml
ingestion/aios_ingest/: __init__.py  brain_client.py  cli.py  config.py  engine.py  normalize.py  payload.py  scheduler.py  selections.py  state.py  webhook_app.py
ingestion/aios_ingest/analyzers/: __init__.py  codebase.py  readiness.py
ingestion/aios_ingest/parsers/: __init__.py  unstructured.py
ingestion/aios_ingest/rubric/: __init__.py  agent-readiness.json
ingestion/aios_ingest/sources/: __init__.py  _llamahub.py  base.py  confluence.py  gdrive.py  gdrive_watch.py  github.py  granola.py  linear.py  local.py  notion.py  notion_authors.py  radar.py  registry.py  slack.py  web.py
ingestion/scripts/: refresh-rubric.sh
ingestion/tests/: test_brain_client.py  test_codebase_analyzer.py  test_engine.py  test_github.py  test_granola.py  test_normalize.py  test_notion_authors.py  test_payload.py  test_radar.py  test_readiness_scorer.py  test_rubric_valid.py  test_scheduler.py  test_selections.py  test_sources_more.py
lib/: http.ts  ids.ts  num.ts
postgres/: schema.sql
scripts/: admin.ts  aios-backlog.mjs  backfill-github-file-authors.ts  backfill-meeting-summaries.ts  backfill-meeting-todo-rowkeys.ts  brain-tasks.ts  check-docs-drift.mjs  check-error-boundaries.mjs  check-gateway-writers.mjs  dev-login.ts  dev-test-setup.sh  e2e.sh  embed-backfill.ts  linear-backlog.mjs  link-worktree-env.sh  pg-load-schema.mjs  pg-load-schema.ts  pg-load-vector.mjs  plane-backlog.mjs  plane-views.mjs  pm-sync-backfill.ts  railway-deploy-guard.sh  railway-link-check.sh  seed-demo.ts  service-guard.mjs
supabase/: config.toml
test/: admin-access.test.ts  api-auth-team-header.test.ts  arc-attribution.test.ts  arc-eligibility.test.ts  arcs-commit.test.ts  arcs-stability.test.ts  attribution-contributor-credit.test.ts  attribution-correction.test.ts  attribution-drilldown-action-authz.test.ts  attribution-health.test.ts  attribution-propagation.test.ts  attribution-resolve-authors.test.ts  auth-next-path.test.ts  auth-visibility.test.ts  brand-schema.test.ts  format.test.ts  (+99 more)
(+801 files in other folders)
